--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An IMAP module for node.js that makes communicating with IMAP servers easy",
   "main": "./lib/Connection",
   "dependencies": {
-    "utf7": "1.0.0",
+    "utf7": "git+ssh://git@github.com:kkontosis/utf7.git",
     "readable-stream": "1.1.x"
   },
   "scripts": {
